syntax = "proto3";

package ticket;
option go_package = "github.com/dwikikusuma/ticket-tix/common/gen/ticket/v1;ticketv1";

message UpdateTicketStatusRequest {
  string seat_id = 1;
  int32 event_category = 2;
  string status = 3;
}

message UpdateTicketStatusResponse {
  int32 ticket_id = 1;
  string status = 2;
}

service TicketService {
  rpc UpdateTicketStatus (UpdateTicketStatusRequest) returns (UpdateTicketStatusResponse);
}